syntax = "proto2";

package protobuf;

option optimize_for = SPEED;
option java_package = "cn.edu.sdu.JT808Server.protobuf";
option java_outer_classname = "ServerData";

message Protocol {

    enum ProtoType {
        TerminalDriverIdentityMsg = 1;
        TerminalParamQueryResponseMsg = 2;
        TerminalDigitWaybill = 3;
        TerminalCameraPhotoResponseMsg = 4;
        TerminalAttributeQueryResponseMsg = 5;
        TerminalLocationMsg = 6;
        TerminalMediaDataMsg = 7;
        TerminalBulkLocationMsg = 8;
        TerminalUploadMediaAttributeMsg = 9;
        TerminalUploadMediaResourcesMsg = 10;
        TerminalSavedMediaRetrievalResponseMsg = 11;
    }

    required int32 protoType = 1;
    optional string time = 2;
    oneof dataBody {
        TerminalDriverIdentityMsg terminalDriverIdentityMsg = 4;
        TerminalParamQueryResponseMsg terminalParamQueryResponseMsg = 5;
        TerminalDigitWaybill terminalDigitWaybill = 6;
        TerminalCameraPhotoResponseMsg terminalCameraPhotoResponseMsg = 7;
        TerminalAttributeQueryResponseMsg terminalAttributeQueryResponseMsg = 8;
        TerminalLocationMsg terminalLocationMsg = 9;
        TerminalMediaDataMsg terminalMediaDataMsg = 10;
        TerminalBulkLocationMsg terminalBulkLocationMsg = 11;
        TerminalUploadMediaAttributeMsg terminalUploadMediaAttributeMsg = 12;
        TerminalUploadMediaResourcesMsg terminalUploadMediaResourcesMsg = 13;
        TerminalSavedMediaRetrievalResponseMsg terminalSavedMediaRetrievalResponseMsg = 14;
    }

}

message TerminalDriverIdentityMsg {
    optional int32 state = 1;
    optional string time = 2;
    optional int32 ICCardInfo = 3;
    optional string driverName = 4;
    optional string qualificationCode = 5;
    optional string authorityName = 6;
    optional string cardValidityTerm = 7;

    optional string terminalPhone = 8;
    optional int32 flowId = 9;
}

message TerminalAttributeQueryResponseMsg {

    optional TerminalType terminalType = 1;
    optional string manufacturerId = 2;
    optional string terminalModel = 3;
    optional string terminalId = 4;
    optional string ICCID = 5;
    optional string terminalHardwareVersion = 6;
    optional string terminalFirmwareVersion = 7;
    optional GNSSAttribute gnssAttribute = 8;
    optional CommunicationModuleAttribute communicationModuleAttribute = 9;

    message TerminalType {
        optional bool passengerVehicles = 1;
        optional bool dangerousGoodsVehicles = 2;
        optional bool commonFreightVehicle = 3;
        optional bool taxi = 4;
        optional bool supportingHardDiskVideo = 5;
        optional bool integratedMachine = 6;
    }

    message GNSSAttribute {
        optional bool GPS = 1;
        optional bool beidou = 2;
        optional bool GLONASS = 3;
        optional bool Galileo = 4;
    }

    message CommunicationModuleAttribute {
        optional bool GPSCommunication = 1;
        optional bool CDMA = 2;
        optional bool TDSCMA = 3;
        optional bool WCDMA = 4;
        optional bool CDMA2000 = 5;
        optional bool TDLTE = 6;
        optional bool otherCommunication = 7;
    }

    optional string terminalPhone = 10;
    optional int32 flowId = 11;
}

message TerminalCameraPhotoResponseMsg {
    optional int32 replyFlowId = 1;
    optional int32 result = 2;
    optional int32 mediaIdNum = 3;
    repeated int32 mediaIdList = 4;

    optional string terminalPhone = 5;
    optional int32 flowId = 6;
}

message TerminalDigitWaybill {
    optional string digitWaybillData = 1;

    optional string terminalPhone = 2;
    optional int32 flowId = 3;
}

message TerminalParamQueryResponseMsg {
    optional int32 replyParamNumber = 1;
    optional TerminalParam terminalParam = 2;

    message TerminalParam {
        optional int32 beatInterval = 1;
        optional int32 TCPTimeout = 2;
        optional int32 TCPretransTimes = 3;
        optional int32 UDPTimeout = 4;
        optional int32 UDPretransTimes = 5;
        optional int32 SMSTimeout = 6;
        optional int32 SMSretransTimes = 7;
        optional string mainServerAPN = 8;
        optional string mainServerUsername = 9;
        optional string mainServerPassword = 10;
        optional string mainServerHost = 11;
        optional string backupServerAPN = 12;
        optional string backupServerUsername = 13;
        optional string backupServerPassword = 14;
        optional string backupServerHost =15;
        optional int32 serverTCPport = 16;
        optional int32 serverUDPport = 17;
        optional string ICverifyMainServerHost =18;
        optional int32 ICverifyServerTCPport = 19;
        optional int32 ICverifyServerUDPport = 20;
        optional string ICverifyBackupServerHost = 21;
        optional int32 locatonInfoStrategy = 22;
        optional int32 locatonInfoPlan = 23;
        optional int32 unloginTimeInterval = 24;
        optional int32 sleepTimeInterval = 25;
        optional int32 warningTimeInterval = 26;
        optional int32 defaultInterval = 27;
        optional int32 defaultDistanceInterval = 28;
        optional int32 unloginDistanceInterval = 29;
        optional int32 sleepDistanceInterval = 30;
        optional int32 warningDistanceInterval = 31;
        optional int32 retransmissionAngle = 32;
        optional int32 electronicFenceRadius = 33;
        optional string platformPhoneNum = 34;
        optional string resetPhoneNum = 35;
        optional string restorePhoneNum = 36;
        optional string platformSMSphoneNum = 37;
        optional string alarmSMSphoneNum = 38;
        optional int32 phoneStrategy = 39;
        optional int32 longestPhoneTime = 40;
        optional int32 monthLongestPhoneTime = 41;
        optional string monitorPhone = 42;
        optional string platformPrivilegeSMS = 43;
        optional int32 alarmShieldingWord = 44;
        optional int32 alarmSMS = 45;
        optional int32 alarmPhoto = 46;
        optional int32 alarmPhotoSave = 47;
        optional int32 keyFlag = 48;
        optional int32 highestSpeed = 49;
        optional int32 speedingTime = 50;
        optional int32 driverTimeLimit = 51;
        optional int32 todayDriverTime = 52;
        optional int32 leastRestTime = 53;
        optional int32 longestPortTime = 54;
        optional int32 speedingWarningDifferenceValue = 55;
        optional int32 tiredDriveWarningDifferenceValue = 56;
        optional int32 rolloverParam = 57;
        optional TimingPhotoControlBit timingPhotoControlBit= 58;
        optional FixedPictureControlBit fixedPictureControlBit = 59;
        optional int32 cameraQuality = 60;
        optional int32 light = 61;
        optional int32 contrast = 62;
        optional int32 saturation = 63;
        optional int32 color = 64;
        optional int32 mileage = 65;
        optional int32 provinceId = 66;
        optional int32 cityId = 67;
        optional string licensePlate = 68;
        optional int32 licensePlateColor = 69;
        optional GNSS gnss = 70;
        optional int32 GNSSbaudRatio = 71;
        optional int32 GNSSdataOutputFrequency = 72;
        optional int32 GNSSdataFrequency = 73;

        message GNSS {
            optional bool GPS = 1;
            optional bool beidou = 2;
            optional bool GLONASS = 3;
            optional bool Galileo = 4;
        }

        message TimingPhotoControlBit {
            optional bool cameraChannelTiming1 = 1;
            optional bool cameraChannelTiming2 = 2;
            optional bool cameraChannelTiming3 = 3;
            optional bool cameraChannelTiming4 = 4;
            optional bool cameraChannelTiming5 = 5;
            optional bool cameraChannelTimingSave1 = 6;
            optional bool cameraChannelTimingSave2 = 7;
            optional bool cameraChannelTimingSave3 = 8;
            optional bool cameraChannelTimingSave4 = 9;
            optional bool cameraChannelTimingSave5 = 10;
            optional int32 TimingUnit = 11;
            optional int32 TimingInterval = 12;
        }

        message FixedPictureControlBit {
            optional bool cameraChannelFixed1 = 1;
            optional bool cameraChannelFixed2 = 2;
            optional bool cameraChannelFixed3 = 3;
            optional bool cameraChannelFixed4 = 4;
            optional bool cameraChannelFixed5 = 5;
            optional bool cameraChannelFixedSave1 = 6;
            optional bool cameraChannelFixedSave2 = 7;
            optional bool cameraChannelFixedSave3 = 8;
            optional bool cameraChannelFixedSave4 = 9;
            optional bool cameraChannelFixedSave5 = 10;
            optional int32 FixedUnit = 11;
            optional int32 FixedInterval = 12;
        }
    }

    optional string terminalPhone = 3;
    optional int32 flowId = 4;
}

message TerminalLocationMsg {
    optional WarningFlag warningFlag = 1;
    optional Status status = 2;

    optional double latitude = 3;
    optional double longitude = 4;
    optional int32 elevation = 5;
    optional double speed = 6;
    optional int32 direction = 7;
    optional string time = 8;
    optional TerminalExtraLocationMsg terminalExtraLocationMsg = 9;
    optional string terminalPhone = 10;
    optional int32 flowId = 11;

    message WarningFlag {
        optional bool warningFlag = 1;
        optional bool overSpeeding = 2;
        optional bool overTired = 3;
        optional bool dangerous = 4;
        optional bool GNSSFault = 5;
        optional bool GNSSAntennaFault = 6;
        optional bool GNSSAntennaShortCircuit = 7;
        optional bool terminalMainPowerUnderVoltage = 8;
        optional bool terminalMainPowerFailure = 9;
        optional bool TerminalLCDFault = 10;
        optional bool TTSFault = 11;
        optional bool cameraFault = 12;
        optional bool ICCardFault = 13;
        optional bool speeding = 14;
        optional bool tired = 15;
        optional bool driveTimeout = 16;
        optional bool parkingOvertime = 17;
        optional bool throughArea = 18;
        optional bool throughRoad = 19;
        optional bool roadTimeout = 20;
        optional bool roadFault = 21;
        optional bool VSSFault = 22;
        optional bool vehicleOilException = 23;
        optional bool vehicleTheft = 24;
        optional bool vehicleIllegalIgnition = 25;
        optional bool vehicleIllegalShift = 26;
        optional bool collisionWarning = 27;
        optional bool rolloverWarning = 28;
        optional bool illegalOpenDoor = 29;
    }

    message Status {
        optional bool ACC = 1;
        optional bool isLocation = 2;
        optional bool latitude = 3;
        optional bool longitude = 4;
        optional bool isRunning = 5;
        optional bool encrypt = 6;
        optional int32 goodsStatus = 7;
        optional bool vehicleOil = 8;
        optional bool vehicleCircut = 9;
        optional bool doorLock = 10;
        optional bool frontDoorOpen = 11;
        optional bool middleDoorOpen = 12;
        optional bool endDoorOpen = 13;
        optional bool driverDoorOpen = 14;
        optional bool otherDoorOpen = 15;
        optional bool GPS = 16;
        optional bool beidou = 17;
        optional bool GLONASS = 18;
        optional bool Galileo = 19;
    }

    message TerminalExtraLocationMsg {
        optional int32 mileage = 1;
        optional int32 oilQuantity = 2;
        optional int32 carSpeed = 3;
        optional int32 warningId = 4;
        optional SpeedingExtraData speedingExtraData = 5;
        optional LocationExtraData locationExtraData = 6;
        optional LocationInfoExtraData locationInfoExtraData = 7;
        optional ExtraCarState extraCarState = 8;
        optional IOState ioState = 9;
        optional int32 simulation = 10;
        optional int32 wirelessIntensity = 11;
        optional int32 satellitesNum = 12;
        optional VideoAlarm videoAlarm = 13;
        optional VideoLostFlag videoLostFlag = 14;
        optional VideoShelterFlag videoShelterFlag = 15;
        optional StorageFaultFlag storageFaultFlag = 16;
        optional ExceptBehavior exceptBehavior = 17;

        message SpeedingExtraData {
            optional int32 locationType = 1;
            optional string locationId = 2;
        }

        message LocationExtraData {
            optional int32 locationType = 1;
            optional string locationId = 2;
            optional int32 direction = 3;
        }

        message LocationInfoExtraData {
            optional string roadId = 1;
            optional int32 runTime = 2;
            optional int32 result = 3;
        }

        message ExtraCarState {
            optional bool lowLightSignal = 1;
            optional bool farLightSignal = 2;
            optional bool rightLightSignal = 3;
            optional bool leftLightSignal = 4;
            optional bool brakingSignal = 5;
            optional bool reverseSignal = 6;
            optional bool fogLampSignal = 7;
            optional bool outlineLamp = 8;
            optional bool hornSignal = 9;
            optional bool airCondition = 10;
            optional bool neutralSignal = 11;
            optional bool retarderOperation = 12;
            optional bool ABSOperation = 13;
            optional bool heaterOperation = 14;
            optional bool clutchState = 15;
        }

        message IOState {
            optional bool deepDormancy = 1;
            optional bool dormancy = 2;
        }

        message VideoAlarm {
            optional bool videoLost = 1;
            optional bool videoShelter = 2;
            optional bool storageFault = 3;
            optional bool otherFault = 4;
            optional bool overcrowding = 5;
            optional bool exceptBehavior = 6;
            optional bool videoStorageOver = 7;
        }

        message VideoLostFlag {
            optional bool logicChannel1 = 1;
            optional bool logicChannel2 = 2;
            optional bool logicChannel3 = 3;
            optional bool logicChannel4 = 4;
            optional bool logicChannel5 = 5;
            optional bool logicChannel6 = 6;
            optional bool logicChannel7 = 7;
            optional bool logicChannel8 = 8;
            optional bool logicChannel9 = 9;
            optional bool logicChannel10 = 10;
            optional bool logicChannel11 = 11;
            optional bool logicChannel12 = 12;
            optional bool logicChannel13 = 13;
            optional bool logicChannel14 = 14;
            optional bool logicChannel15 = 15;
            optional bool logicChannel16 = 16;
            optional bool logicChannel17 = 17;
            optional bool logicChannel18 = 18;
            optional bool logicChannel19 = 19;
            optional bool logicChannel20 = 20;
            optional bool logicChannel21 = 21;
            optional bool logicChannel22 = 22;
            optional bool logicChannel23 = 23;
            optional bool logicChannel24 = 24;
            optional bool logicChannel25 = 25;
            optional bool logicChannel26 = 26;
            optional bool logicChannel27 = 27;
            optional bool logicChannel28 = 28;
            optional bool logicChannel29 = 29;
            optional bool logicChannel30 = 30;
            optional bool logicChannel31 = 31;
            optional bool logicChannel32 = 32;
        }

        message VideoShelterFlag {
            optional bool logicChannel1 = 1;
            optional bool logicChannel2 = 2;
            optional bool logicChannel3 = 3;
            optional bool logicChannel4 = 4;
            optional bool logicChannel5 = 5;
            optional bool logicChannel6 = 6;
            optional bool logicChannel7 = 7;
            optional bool logicChannel8 = 8;
            optional bool logicChannel9 = 9;
            optional bool logicChannel10 = 10;
            optional bool logicChannel11 = 11;
            optional bool logicChannel12 = 12;
            optional bool logicChannel13 = 13;
            optional bool logicChannel14 = 14;
            optional bool logicChannel15 = 15;
            optional bool logicChannel16 = 16;
            optional bool logicChannel17 = 17;
            optional bool logicChannel18 = 18;
            optional bool logicChannel19 = 19;
            optional bool logicChannel20 = 20;
            optional bool logicChannel21 = 21;
            optional bool logicChannel22 = 22;
            optional bool logicChannel23 = 23;
            optional bool logicChannel24 = 24;
            optional bool logicChannel25 = 25;
            optional bool logicChannel26 = 26;
            optional bool logicChannel27 = 27;
            optional bool logicChannel28 = 28;
            optional bool logicChannel29 = 29;
            optional bool logicChannel30 = 30;
            optional bool logicChannel31 = 31;
            optional bool logicChannel32 = 32;
        }

        message StorageFaultFlag {
            optional bool storage1 = 1;
            optional bool storage2 = 2;
            optional bool storage3 = 3;
            optional bool storage4 = 4;
            optional bool storage5 = 5;
            optional bool storage6 = 6;
            optional bool storage7 = 7;
            optional bool storage8 = 8;
            optional bool storage9 = 9;
            optional bool storage10 = 10;
            optional bool storage11 = 11;
            optional bool storage12 = 12;
            optional bool backupStorage1 = 13;
            optional bool backupStorage2 = 14;
            optional bool backupStorage3 = 15;
            optional bool backupStorage4 = 16;
        }

        message ExceptBehavior {
            optional ExceptBehaviorType exceptBehaviorType = 1;
            optional int32 tiredLevel = 2;

            message ExceptBehaviorType {
                optional bool tired = 1;
                optional bool phone = 2;
                optional bool smoking = 3;
            }
        }

    }

}

message TerminalBulkLocationMsg {
    optional int32 dataNum = 1;
    optional int32 dataType = 2;
    repeated TerminalLocationMsg terminalLocationMsg = 3;

    optional string terminalPhone = 4;
    optional int32 flowId = 5;
}

message TerminalMediaDataMsg {
    optional int32 mediaId = 1;
    optional int32 mediaType = 2;
    optional int32 mediaCode = 3;
    optional int32 eventCode = 4;
    optional int32 channelId = 5;
    optional TerminalLocationMsg terminalLocationMsg = 6;
    optional bytes mediaData = 7;

    optional string terminalPhone = 8;
    optional int32 flowId = 9;
}

message TerminalUploadMediaAttributeMsg {
    optional int32 voiceCode = 1;
    optional int32 voiceChannelNum = 2;
    optional int32 voiceSamplingRate = 3;
    optional int32 voiceSamplingBit = 4;
    optional int32 voiceFrameLength = 5;
    optional int32 voiceOutput = 6;
    optional int32 videoCode = 7;
    optional int32 maxVoiceChannelNum = 8;
    optional int32 maxVideoChannelNum = 9;

    optional string terminalPhone = 10;
    optional int32 flowId = 11;
}

message TerminalUploadMediaResourcesMsg {
    optional int32 replyFlowId = 1;
    optional int32 mediaResourcesNum = 2;
    repeated MediaResources mediaResources = 3;

    message MediaResources {
        optional int32 logicChannelNum = 1;
        optional string startTime = 2;
        optional string endTime = 3;
        optional int64 alarmFlag = 4;
        optional int32 mediaResourcesType = 5;
        optional int32 bitStreamType = 6;
        optional int32 storageTYpe = 7;
        optional int32 fileSize = 8;
    }

    optional string terminalPhone = 4;
    optional int32 flowId = 5;
}

message TerminalSavedMediaRetrievalResponseMsg {
    optional int32 replyFlowId = 1;
    optional int32 mediaRetrievalNum = 2;

    repeated TerminalRetrievalDataMsg terminalRetrievalDataMsg = 3;

    message TerminalRetrievalDataMsg {
        optional int32 mediaId = 1;
        optional int32 mediaType = 2;
        optional int32 eventCode = 3;
        optional int32 passagewayId = 4;
        optional TerminalLocationMsg terminalLocationMsg = 5;
    }

    optional string terminalPhone = 4;
    optional int32 flowId = 5;
}
